// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty expenses message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1000000}
      createdAt={0}
      description="coffee"
      id={1}
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={100000}
      createdAt={-345600000}
      description="rent"
      id={2}
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={223421}
      createdAt={345600000}
      description="shopping"
      id={3}
      key="3"
      note=""
    />
  </div>
</div>
`;
